fixed the word-wrap issue

--- a/css/p2.css
+++ b/css/p2.css
@@ -65,6 +65,7 @@ hr {
   /* height: 100px; */
   vertical-align: middle;
   border: 3px dashed #d1d1d1;
+  word-wrap: break-word;
 }
 
 .container {
